--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "main": "build/boilerplate.min.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --config webpack.development.js --open",
-    "build": "webpack --mode production  --config webpack.production.js ./src/Boilerplate/Boilerplate.js --output ./build/boilerplate.min.js",
+    "build": "webpack --mode production --config webpack.production.js ./src/Boilerplate/Boilerplate.js --output ./build/boilerplate.min.js",
     "lint": "eslint src/**/*.js",
-    "test": "mocha  -r babel-core/register test/{**/*,*}.test.js"
+    "test": "mocha -r babel-core/register test/{**/*,*}.test.js"
   },
   "husky": {
     "hooks": {
@@ -22,7 +22,6 @@
   "lint-staged": {
     "**/*.js": [
       "npm run lint",
-      "npm run build",
       "git add"
     ]
   },
@@ -37,7 +36,7 @@
     "eslint-config-loris": "^9.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.2",
     "lint-staged": "^7.0.4",
     "mocha": "^5.1.1",
     "webpack": "^4.6.0",
