добавил global: ymaps в eslintrc, поменял версию в package.json, добавил скрипт api yandex карт, добавил инициализацию карты на странице

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
     "es6": true,
     "mocha": true
   },
+  "globals": {
+    "ymaps": true
+  },
   "rules": {
     "strict": ["error", "never"],
     "curly": [0, "multi"],
