infra: Update configs

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,8 @@
-build/
-umd/
-examples/
-node_modules/
-public/
-webpack.development.js
-webpack.examples.js
-webpack.module.js
+/build/
+/umd/
+/examples/
+/node_modules/
+/public/
+/webpack.development.js
+/webpack.examples.js
+/webpack.module.js
