--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+umd/
+dist/
 
 # Dependency directories
 node_modules/
@@ -56,3 +58,7 @@ typings/
 
 # dotenv environment variables file
 .env
+
+# webstorm IDE files
+
+.idea
