--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "maps",
     "boilerplate"
   ],
-  "main": "umd/boilerplate.min.js",
+  "main": "src/Boilerplate.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --config webpack.development.js --open",
+    "dev": "webpack-dev-server --mode development --config webpack.examples.js --open",
     "build": "npm run build-module && npm run build-examples",
     "build-module": "webpack --mode production --config webpack.module.js",
     "build-examples": "webpack --mode production --config webpack.examples.js",
-    "deploy": "gh-pages -d examples",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint src/**/*.js",
-    "test": "mocha -r babel-core/register test/{**/*,*}.test.js"
+    "test": "mocha -r babel-core/register src/**/*.test.js"
   },
   "husky": {
     "hooks": {
