--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
-  - 8
-  - 6
+  - "8"
+  - "6"
 cache:
   directories:
     - node_modules
+script:
+  - commitlint-travis
