--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build-examples": "webpack --mode production --config webpack.examples.js",
     "deploy": "gh-pages -d dist",
     "lint": "eslint src/**/*.js",
-    "test": "mocha -r babel-core/register src/**/*.test.js"
+    "test": "nyc mocha -r babel-core/register src/**/*.test.js"
   },
   "husky": {
     "hooks": {
@@ -49,6 +49,7 @@
     "json-loader": "^0.5.7",
     "lint-staged": "^7.0.4",
     "mocha": "^5.1.1",
+    "nyc": "^11.7.3",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
