--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,7 @@
+image: Visual Studio 2017
+branches:
+  only:
+    - master
 init:
   - git config --global core.autocrlf true
 environment:
@@ -15,9 +19,7 @@ install:
   - ps: Install-Product node $env:nodejs_version $env:platform
   - npm install
 build: off
-skip_commits:
-  files:
-    - '**/*.md'
+deploy: off
 test_script:
   - node --version
   - npm --version
