build(jsdoc): add .jsdoc template

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint src/**/*.js",
     "test": "nyc mocha -r babel-core/register src/**/*.test.js",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "docs": "jsdoc2md --template .github/README.md src/*.js > README.md"
+    "docs": "jsdoc2md --template .jsdoc/README.md src/*.js > README.md"
   },
   "husky": {
     "hooks": {
